fixed scrolling hidden behind input

--- a/frontend/src/style/style.css
+++ b/frontend/src/style/style.css
@@ -253,7 +253,7 @@ height: 32px
   font-size: 150%;
   float: left;
   overflow-y: scroll;
-  height: 100%;
+  height: 95%;
   padding-bottom: 40px;
   margin: 0;
 }
